fix header collapse under 468px

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -20,7 +20,7 @@
 
 
 .nav {
-    width: 77%;
+    width: calc(77% - 7.7vw);
 }
 
 .logo img {
